--- a/index.html
+++ b/index.html
@@ -40,12 +40,7 @@
         <br></p>
         <h3 style="color: aqua;">Biografia</h3>
         <p style="color: rgb(255, 255, 0);">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
-        (era um personagem do desenho He-Man), desde muito cedo tive contato com computadores (Win7 Starter),<br>
-         eu tinha 9 anos nessa época quando meu tio me deu um notebook, minha família não tinha condições de<br>
-         colocar internet em casa, meu pai fazia um curso de informática e tinha uns materiais de introdução <br>
-         ao Windows e alguns DVDs, por ser uma criança com um notebook sem internet eu fui ler e praticar as coisas <br>
-         que eu lia e aprendia naqueles livros, aprendi a usar o Office e a formatar e particionar o Windows.<br>
-        desde então sempre fui aprendendo cada vez mais sobre computadores e tecnologia.</p>
+        (era um personagem do desenho He-Man).</p>
     </div>
     <div id="profile" style="position: relative; top: 550px; left: 1000px;transition-property: background-color; transition-duration: 2s;">
         <img class="foto1" src="images/profile.png" alt="profile" style="border-radius: 150px; height: 150px; width: 150px;">
