--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <img id="imagem" src="images/image.png" alt="void">
     <div id="sliders">
         <img class="foto" src="backgrounds/bg.png" alt="void">
-        <img class="foto" src="backgrounds/bg1.png" alt="void">
+        <img class=foto" src="backgrounds/bg1.png" alt="void">
         <img class="foto" src="backgrounds/bg2.png" alt="void">
     </div>
     <script src="config.js"></script>
-    <div style="position: relative; top: 700px; left: 50px; transition-property: background-color; transition-duration: 2s;">
+    <div style="position: relative; top: 900px; left: 50px; transition-property: background-color; transition-duration: 2s;">
         <h2 style="color: rgb(201, 201, 32);">Sobre o Desenvolvedor</h2>
         <p style="color: aquamarine;">
         -Automação de Testes Web<br>
@@ -39,15 +39,21 @@
         -Análise de dados<br>
         <br></p>
         <h3 style="color: aqua;">Biografia</h3>
-        <p style="color: rgb(255, 255, 0);">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
-        (era um personagem do desenho He-Man), desde muito cedo tive contato com computadores (Win7 Starter),<br>
-         eu tinha 9 anos nessa época quando meu tio me deu um notebook, minha família não tinha condições de<br>
-         colocar internet em casa, meu pai fazia um curso de informática e tinha uns materiais de introdução <br>
-         ao Windows e alguns DVDs, por ser uma criança com um notebook sem internet eu fui ler e praticar as coisas <br>
-         que eu lia e aprendia naqueles livros, aprendi a usar o Office e a formatar e particionar o Windows.<br>
-        desde então sempre fui aprendendo cada vez mais sobre computadores e tecnologia.</p>
+        <p id="biograpy" style="color: rgb(255, 255, 0);">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
+         (era um personagem do desenho He-Man), desde muito cedo tive<br> 
+         contato com computadores (Win7 Starter),eu tinha 9 anos<br> 
+         nessa época quando meu tio me deu um notebook, minha<br> 
+         família não tinha condições de colocar internet em<br>
+         casa, meu pai fazia um curso de informática e tinha uns<br>
+         materiais de introdução ao Windows e alguns DVDs, por<br>
+         ser uma criança com um notebook sem internet eu fui<br>
+         ler e praticar as coisas que eu lia e aprendia<br> 
+         naqueles livros, aprendi a usar o Office e a<br>
+         formatar e particionar o Windows. Desde então<br>
+         sempre fui aprendendo cada vez mais sobre<br>
+         computadores e tecnologia.</p>
     </div>
-    <div id="profile" style="position: relative; top: 550px; left: 1000px;transition-property: background-color; transition-duration: 2s;">
+    <div id="profile" style="position: relative; top: 350px; left: 150px;transition-property: background-color; transition-duration: 2s;">
         <img class="foto1" src="images/profile.png" alt="profile" style="border-radius: 150px; height: 150px; width: 150px;">
     </div>
 </body>
