--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="foto" src="backgrounds/bg2.png" alt="void">
     </div>
     <script src="config.js"></script>
-    <div style="position: relative; top: 900px; left: 50px; transition-property: background-color; transition-duration: 2s;">
+    <div style="position: relative; top: 700px; left: 50px;">
         <h2 style="color: rgb(201, 201, 32);">Sobre o Desenvolvedor</h2>
         <p style="color: aquamarine;">
         -Automação de Testes Web<br>
@@ -53,7 +53,7 @@
          sempre fui aprendendo cada vez mais sobre<br>
          computadores e tecnologia.</p>
     </div>
-    <div id="profile" style="position: relative; top: 350px; left: 150px;transition-property: background-color; transition-duration: 2s;">
+    <div id="profile" style="position: relative; top: 950px; left: 150px;transition-property: background-color; transition-duration: 2s;">
         <img class="foto1" src="images/profile.png" alt="profile" style="border-radius: 150px; height: 150px; width: 150px;">
     </div>
 </body>
