--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         -Análise de dados<br>
         <br></p>
         <h3 style="color: aqua;">Biografia</h3>
-        <p id="biograpy" style="color: rgb(255, 255, 0);">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
+        <p id="biograpy" style="color: rgb(255, 255, 0); font-size: 20px;">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
          (era um personagem do desenho He-Man), desde muito cedo tive<br> 
          contato com computadores (Win7 Starter),eu tinha 9 anos<br> 
          nessa época quando meu tio me deu um notebook, minha<br> 
