--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
         <img class=foto" src="backgrounds/bg1.png" alt="void">
         <img class="foto" src="backgrounds/bg2.png" alt="void">
     </div>
-    <div style="position: relative; top: 800px; left: 50px; background-color: rgb(10, 6, 20); border-radius: 10px; width: 650px; height: 800px;">
-        <h2 style="color: rgb(201, 201, 32);">Sobre o Desenvolvedor</h2>
-        <p style="color: aquamarine;">
+
+    <div id="sobreodev">
+        <h2 style="color: rgb(201, 201, 32);">Sobre o Desenvolvedor (Skils):</h2>
+        <p style="color: aquamarine; font-size: 20px;">
         -Automação de Testes Web<br>
         -Criar interfaces Graficas<br>
         -Análise de dados<br>
         <br></p>
         <h3 style="color: aqua;">Biografia</h3>
-        <p id="biograpy" style="color: rgb(255, 255, 0); font-size: 20px;">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
+        <p id="biograpy">"Hello World", me clamo Liedson e me intitulo Goorpu<br>
          (era um personagem do desenho He-Man), desde muito cedo tive<br> 
          contato com computadores (Win7 Starter),eu tinha 9 anos<br> 
          nessa época quando meu tio me deu um notebook, minha<br> 
@@ -60,8 +61,8 @@
          formatar e particionar o Windows. Desde então<br>
          sempre fui aprendendo cada vez mais sobre<br>
          computadores e tecnologia.</p>
-        <img class="foto1" src="images/profile2.jpeg" alt="profile" style="border-radius: 150px;position: relative; left: 220px; top: 60px; height: 150px; width: 150px;">
-        <img class="foto2" src="images/profile.png" alt="profile2" style="border-radius: 150px;position: absolute ; left: 320px; top: 675px; height: 50px; width: 50px;">
+        <img id="foto1" src="images/profile2.jpeg" alt="profile">
+        <img id="foto2" src="images/profile.png" alt="profile2">
     </div>
 </body>
 </html>
