--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <nav id="Menu">
         <ul>
             <li>
-                <a href="" onmouseover="showTooltip()" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
+                <a href="https://drive.google.com/file/d/1sSAOxdGrQ4JIiWSb768u0A0_MITW5BQT/view?usp=sharing" onmouseover="showTooltip()" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
             </li>
             <li>
-                <a href="" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
+                <a href="https://drive.google.com/file/d/1cwImP3U-EjX-iCPCLaipJXKoRTCoFtfx/view?usp=sharing" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
             </li>
         </ul>
     </nav>
@@ -31,6 +31,23 @@
         }
         function hideTooltip2(){
             document.querySelector(".IFk_YT_Down").style.display = "none";
+        }
+        function detectDevice(){
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? 'Mobile' : 'Desktop';
+        }
+        var device = detectDevice()
+        var MoblieDeviceAlert = document.createElement("div")
+        MoblieDeviceAlert.innerHTML ='<u><b>Você esta usando um dispositivo móvel, sua experiência pode ser afetada.<b><u>'
+        MoblieDeviceAlert.style.padding = "20px";
+        MoblieDeviceAlert.style.background = 'rgb(32, 247, 25)';
+        MoblieDeviceAlert.style.width = "600px";
+        MoblieDeviceAlert.style.color = "rgb(2, 1, 3)";
+        MoblieDeviceAlert.style.height = "5px";
+        MoblieDeviceAlert.style.border = "5px";
+        MoblieDeviceAlert.style.top = "0px";
+        MoblieDeviceAlert.style.position = "absolute";
+        if (device == "Mobile"){
+            document.body.appendChild(MoblieDeviceAlert)
         }
     </script>
 <img id="imagem" src="images/image.png" alt="void">
