--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Yurby</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body background="backgrounds/bg_star.jpg" style="width: 100%; height: 100%; object-fit: cover; border: none;">
     <nav id="Menu">
         <ul>
             <li>
-                <a href="https://drive.google.com/file/d/1sSAOxdGrQ4JIiWSb768u0A0_MITW5BQT/view?usp=sharing" onmouseover="showTooltip()" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
+                <a href="https://drive.google.com/file/d/1_9nSBTCUrGDBOGqE6gSVH7NOiNpL6peh/view?usp=share_link" onmouseover="showTooltip()" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1cwImP3U-EjX-iCPCLaipJXKoRTCoFtfx/view?usp=sharing" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
+                <a href="https://drive.google.com/file/d/18uYc9U8_ZuJtNqeu4ZRZEdBUKHB0SKPy/view?usp=share_link" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
             </li>
         </ul>
     </nav>
