--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="Menu">
         <ul>
             <li>
-                <a href="https://drive.google.com/file/d/1Kza40fmklaQyJeMbpGLbok7j_QOJRGhk/view?usp=sharing" onmouseover="showTooltip()" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
+                <a href="https://drive.google.com/file/d/1m95tJsM2tsCEbTLjJoZHh3Z3FY8nzyhP/view?usp=sharing" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
             </li>
             <li>
                 <a href="https://drive.google.com/file/d/18uYc9U8_ZuJtNqeu4ZRZEdBUKHB0SKPy/view?usp=share_link" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
