--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="Menu">
         <ul>
             <li>
-                <a href="https://drive.google.com/drive/folders/1XaRSzUPdISa65RXa47eZy--hKvaBwtk9?usp=sharing" onmouseout="hideTooltip()">IFK - Auto Web (Windows)</a>
+                <a href="https://drive.google.com/file/d/13HB9eoXay1Bp13lmZv1XpzDrLSr-18Lm/view?usp=sharing" onmouseout="hideTooltip()">IFK - Whats Auto Manager(Windows)</a>
             </li>
             <li>
                 <a href="https://drive.google.com/file/d/18uYc9U8_ZuJtNqeu4ZRZEdBUKHB0SKPy/view?usp=share_link" onmouseover="showTooltip2()" onmouseout="hideTooltip2()">IFK - YT Down (Windows)</a>
